@@ -1,4 +1,5 @@
 <?xml version="1.0"?>
 <metadata>
+  <!-- mark parameter as an array -->
   <attr path="/api/namespace/struct[@cname='RsvgHandle']/method[@name='Write']/*/*[@name='buf']" name="array">1</attr>
 </metadata>
