@@ -6,4 +6,5 @@ libdir=${exec_prefix}/lib
 Name: Rsvg#
 Description: Rsvg# - librsvg .NET Binding
 Version: @VERSION@
+Requires: gtk-sharp art-sharp
 Libs: -r:${libdir}/mono/@PACKAGE@/rsvg-sharp.dll
