@@ -3,6 +3,10 @@
 	* gtk/Makefile.am: add Menu.custom
 	* gtk/Menu.custom: new custom for Popup () overload
 	[Fixes #60668]
+	* rsvg/Pixbuf.custom: new custom file
+	* rsvg/Makefile.am: add Pixbuf.custom to build
+	* rsvg/Tool.cs: remove double ; that cause warnings
+	* rsvg/rsvg-sharp.pc.in: add Requires: gtk-sharp art-sharp
 
 2004-08-24  Larry Ewing  <lewing@ximian.com>
 
